chore: improves swagger documentation
